--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -556,8 +556,15 @@ background-color: #171717;
 }
 
 .cta-wrapper {
-  text-align: center;
-  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+@media (min-width: 768px) {
+  .cta-wrapper {
+    grid-column: span 3;
+  }
 }
 
 .cta-button {
